feat: Add form to enter order information to checkout

--- a/bag/templates/bag/components/bag_order_summary.html
+++ b/bag/templates/bag/components/bag_order_summary.html
@@ -28,9 +28,11 @@
             </td>
         </tr>
     </table>
-    <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg mb-2">
-        Place Order
-    </button>
+    <a href="{% url 'checkout' %}">
+        <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg mb-2">
+            Place Order
+        </button>
+    </a>
     {% if free_delivery_delta > 0 %}
     <p class="mb-1 free-deliver-delta">
         Spending just <strong>{{ free_delivery_delta|intcomma }}&nbsp;€</strong> more and get free delivery!
