--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -11,7 +11,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="brand-logo" href="{% url 'index' %}"><img class="brand-logo"
-                    src="{{ MEDIA_URL }}/media/homepage-images/logo.png" alt="Bike World Logo"></a>
+                    src="{{ MEDIA_URL }}/homepage-images/logo.png" alt="Bike World Logo"></a>
             <!-- Collapsible wrapper -->
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -28,7 +28,7 @@
                                     <a class="dropdown-item d-flex flex-column"
                                         href="{% url 'products' %}?category=all_mountain">
                                         <p>All Mountain</p>
-                                        <img src="{{ MEDIA_URL }}/media/homepage-images/all-mountain.jpg"
+                                        <img src="{{ MEDIA_URL }}/homepage-images/all-mountain.jpg"
                                             alt="Picture of Mountainbike" class="dropdown-img">
                                     </a>
                                 </li>
@@ -36,7 +36,7 @@
                                     <a class="dropdown-item d-flex flex-column"
                                         href="{% url 'products' %}?category=enduro">
                                         <p>Enduro</p>
-                                        <img src="{{ MEDIA_URL }}/media/homepage-images/enduro.jpg"
+                                        <img src="{{ MEDIA_URL }}/homepage-images/enduro.jpg"
                                             alt="Picture of Mountainbike" class="dropdown-img">
                                     </a>
                                 </li>
@@ -46,7 +46,7 @@
                                     <a class="dropdown-item d-flex flex-column"
                                         href="{% url 'products' %}?category=cross_country">
                                         <p>Cross Country</p>
-                                        <img src="{{ MEDIA_URL }}/media/homepage-images/cross-country.webp"
+                                        <img src="{{ MEDIA_URL }}/homepage-images/cross-country.webp"
                                             alt="Picture of Mountainbike" class="dropdown-img">
                                     </a>
                                 </li>
@@ -55,7 +55,7 @@
                                     <a class="dropdown-item d-flex flex-column"
                                         href="{% url 'products' %}?category=trail">
                                         <p>Trail</p>
-                                        <img src="{{ MEDIA_URL }}/media/homepage-images/trail.webp"
+                                        <img src="{{ MEDIA_URL }}/homepage-images/trail.webp"
                                             alt="Picture of Mountainbike" class="dropdown-img">
                                     </a>
                                 </li>
@@ -76,7 +76,7 @@
                                         <a class="dropdown-item d-flex flex-column"
                                             href="{% url 'products' %}?brand=Cannondale">
                                             <p>Cannondale</p>
-                                            <img src="{{ MEDIA_URL }}/media/homepage-images/cannondale.svg"
+                                            <img src="{{ MEDIA_URL }}/homepage-images/cannondale.svg"
                                                 alt="Cannondale Logo" class="dropdown-img-brand">
                                         </a>
                                     </li>
@@ -84,7 +84,7 @@
                                         <a class="dropdown-item d-flex flex-column"
                                             href="{% url 'products' %}?brand=Fuji">
                                             <p>Fuji</p>
-                                            <img src="{{ MEDIA_URL }}/media/homepage-images/fuji.png" alt="Fuji Logo"
+                                            <img src="{{ MEDIA_URL }}/homepage-images/fuji.png" alt="Fuji Logo"
                                                 class="dropdown-img-brand">
                                         </a>
                                     </li>
@@ -96,7 +96,7 @@
                                         <a class="dropdown-item d-flex flex-column"
                                             href="{% url 'products' %}?brand=Scott">
                                             <p>Scott</p>
-                                            <img src="{{ MEDIA_URL }}/media/homepage-images/scott.png" alt="Scott Logo"
+                                            <img src="{{ MEDIA_URL }}/homepage-images/scott.png" alt="Scott Logo"
                                                 class="dropdown-img-brand">
                                         </a>
                                     </li>
@@ -104,7 +104,7 @@
                                         <a class="dropdown-item d-flex flex-column"
                                             href="{% url 'products' %}?brand=Specialized">
                                             <p>Specialized</p>
-                                            <img src="{{ MEDIA_URL }}/media/homepage-images/specialized.png"
+                                            <img src="{{ MEDIA_URL }}/homepage-images/specialized.png"
                                                 alt="Specialized Logo" class="dropdown-img-brand">
                                         </a>
                                     </li>
