feat: Add JS to handel from submit for checkout

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -56,6 +56,9 @@
                         <!-- Used to display form errors -->
                         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
                     </fieldset>
+                    <button id="submit-button" class="btn btn-shop-now bg-orange btn-shop-lg mb-2">
+                        Complete Order
+                    </button>
                 </form>
             </div>
             <!-- Order Summary -->
@@ -88,12 +91,8 @@
                         </td>
                     </tr>
                 </table>
-                <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg mb-2">
-                    Complete Order
-                </button>
             </div>
         </div>
-    </div>
     </div>
 </main>
 {% endblock content %}
