--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -66,6 +66,16 @@
     color: #6c757d;
 }
 
+.checked-out-order-summary {
+    width: 50%;
+}
+
+@media only screen and (max-width: 991px) {
+    .checked-out-order-summary {
+        width: 100%;
+    }
+}
+
 @media only screen and (max-width: 575px) {
     .checkout-details {
         width: 100%;
