--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -94,6 +94,13 @@
             </div>
         </div>
     </div>
+    <div id="loading-overlay">
+        <h1 class="text-light upper loading-spinner">
+            <span class="icon">
+                <i class="fas fa-3x fa-spinner fa-spin"></i>
+            </span>
+        </h1>
+    </div>
 </main>
 {% endblock content %}
 
