--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -64,34 +64,7 @@
             </div>
             <!-- Order Summary -->
             <div class="order-summary p-lg-5 ms-md-2 ms-0 mb-4">
-                <h2 class="upper">Summary</h2>
-                <hr class="divder-bag">
-                <table>
-                    <tr>
-                        <td>
-                            <p>Subtotal:&nbsp;</p>
-                        </td>
-                        <td>
-                            <p class="text-end">{{ total|intcomma }}&nbsp;€</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p>Delivery:&nbsp;</p>
-                        </td>
-                        <td>
-                            <p class="text-end">{{ delivery|intcomma }}&nbsp;€</p>
-                        </td>
-                    </tr>
-                    <tr class="order-total">
-                        <td>
-                            <p class="pt-2"><strong>Order Total:&nbsp;</strong></p>
-                        </td>
-                        <td>
-                            <p class="pt-2 text-end">{{ grand_total|intcomma }}&nbsp;€</p>
-                        </td>
-                    </tr>
-                </table>
+                {% include 'components/order_summary.html' %}
             </div>
         </div>
     </div>
