--- a/products/templates/products/components/add_to_cart_qty_1.html
+++ b/products/templates/products/components/add_to_cart_qty_1.html
@@ -1,6 +1,7 @@
 <form class="form" action="{% url 'add_to_bag' product.id %}?{{ request.GET.urlencode }}" method="POST">
     {% csrf_token %}
-    <input class="form-control qty_input" type="number" name="quantity" value="1" style="display:none;" required>
+    <input class="form-control qty_input" type="number" name="quantity" value="1" style="display:none;"
+        aria-label="Add 1 to shopping bag" required>
     <input type="hidden" name="redirect_url" value="{{ request.path }}">
     <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg justify-content-end">
         <i class="fa-solid fa-cart-shopping"></i> Add to Bag
