--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load humanize %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+{% endblock %}
+
 {% block content %}
 <main>
     <!-- Hero Banner-->
