--- a/static/css/quantity_input.css
+++ b/static/css/quantity_input.css
@@ -19,7 +19,7 @@
 .qty_input:focus+.qty-label,
 .qty_input:not(:placeholder-shown)+.qty-label {
     top: -10px;
-    left: 50px;
+    left: 56px;
     font-size: .9rem;
     color: #000;
     background-color: white;
@@ -35,4 +35,5 @@
 .input-group-prepend button,
 .input-group-append button {
     border-radius: 50%;
+    padding: .1rem .2rem;
 }
